# MemeCoin-Trader-

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
config/: narrative_accounts.json  settings.yaml  tracked_wallets.json  wallets_to_track.yaml
data/: losers_mentions.json
docs/: CANDIDATE_WALLET_FIXTURE_TEMPLATE.md  DEEPSEEK_CODE_AUDIT_MT118_MT130.md  HELIUS_READINESS_PROVIDER_WIRING.md  MEMECOIN_DECISION_LEDGER_PATTERNS.md  MEMECOIN_DECISION_LEDGER_SCHEMA.md  MICRO_LIVE_RUNBOOK.md  POST_LIVE_REVIEW_TEMPLATE.md  WALLET_SETUP.md  WINDOW_1_FIXTURE_MANIFEST_TEMPLATE.md
migrations/: 0001_memecoin_decision_diagnostic.sql
research/: dune_feasibility.py  dune_feasibility_v2.py
scripts/: analyze_historical_survivor_traits.py  backfill_price_snapshots.py  build_whale_list.py  check_token.py  collect_first_hour_paths.py  compare_discovery_apis.py  dashboard.py  paper_results.py  research_early_mentions.py  research_losers_mentions.py  research_winners_mentions.py  run_dexscreener_collection.py  run_influencer_tracker.py  run_mt438_momentum_trailing.py  run_mt444_momentum_trailing.py  run_mt451_high_liquidity_5s.py  run_narrative_tracker.py  run_paper_loop.py  run_phase6_collection.py  run_strategy_b.py  run_whale_tracker.py  test_grok_lookback.py  test_grok_time_operators.py
src/: __init__.py  cli.py
tests/: ledger_harness.py  test_aggregator.py  test_candidate_observations.py  test_cli_paper_cycle.py  test_cli_paper_minimum.py  test_cli_rejection_diagnostics.py  test_cli_summary.py  test_decision_ledger_migration.py  test_decision_ledger_prototype.py  (+54 more)
(+87 files in other folders)
