[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memecoin-trader"
version = "0.1.0"
description = "Automated Solana meme coin trading scaffold with paper execution defaults."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "solana>=0.34.0",
  "solders>=0.21.0",
  "httpx>=0.27.0",
  "aiohttp>=3.9.0",
  "websockets>=12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pyyaml>=6.0",
  "aiosqlite>=0.20.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.1.0",
  "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
]

[project.scripts]
memecoin-trader = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
